# ai-kernel-explorer

./: LICENSE  README.md  pyproject.toml
ai_kernel_explorer/: main.py  main.tcss  prompt.py
